dysnomia-website/dysnomia-website-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dysnomia-website
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: dysnomia-website
  template:
    metadata:
      labels:
        app: dysnomia-website
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/dysnomia-website:3.4.5
        name: dysnomia-website
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 5m
            memory: 15Mi
          limits:
            cpu: 300m
            memory: 500Mi
      imagePullSecrets:
      - name: github
