dysnomia-website/dysnomia-website-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dysnomia-website
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: dysnomia-website
