dysnomia-website/achieve-games-redirect.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: www-achieve-games-redirect-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`achieve.games`) || Host(`www.achieve.games`)
    kind: Rule
    services:
    - name: dysnomia-website
      port: 80
    middlewares:
      - name: www-achieve-games-redirect
  tls:
    certResolver: le
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: www-achieve-games-redirect
spec:
  redirectRegex:
    regex: ^.*$
    replacement: https://dysnomia.studio
    permanent: true
