dysnomia-website/dysnomia-website-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dysnomia-website-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`dysnomia.studio`) || Host(`www.dysnomia.studio`)
    kind: Rule
    services:
    - name: dysnomia-website
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: dysnomia-tls-secret
